      voice starvation for some gigs)
    - playback is no longer disabled during instrument loading
    - all notes playing on a channel that changes its instrument keep
      playing with the old instrument until they get a note off
      command
    - EG fix: a release value of zero could cause noises or crash
    - handle MIDI coarse tuning messages (MIDI RPN #0 MSB #2 LSB)

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"

Version 0.4.0 (24 November 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license; added ldconfig
      to post-(un)install steps; added devel package for liblinuxsampler;
      to linuxsampler.spec (RPM)
    - install necessary development header files for allowing 3rd party
      applications to link against liblinuxsampler
    - liblinuxsampler's API documentation can be generated with 'make docs'
      (Doxygen required)
    - added benchmark to automatically detect the best triangle LFO
      implementation (currently either an integer math solution or a
      di-harmonic approximation), automatic detection can be overriden
      with --enable-signed-triang-algo=x and --enable-unsigned-triang-algo=x
      configure script argument though (mandatory for cross-compilation)
    - do not automatically pick optimized gcc flags if the user already
      provided some on his own (as CXXFLAGS)
    - added compile time option to disable processing of All-Notes-Off MIDI
      messages
    - added compile time options to allow disabling the various audio and
      MIDI drivers
    - fixed automatic GCC CPU switch detection on PPC
      (patch by Ebrahim Mayat)

  * Gigasampler format engine:
    - extensive synthesis optimization
      (reimplementation of EGs and LFO(s), removed synthesis parameter
      prerendering and the synthesis parameter matrix in general, splitting